tests/snapshots/text_objects_test__da_angle.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
tag [<]content> end
