tests/snapshots/text_objects_test__da_curly.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
{ ke[y]: value } next
