tests/snapshots/text_objects_test__dap_delete_around_paragraph.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 5

Buffer:
[p]ara 1

para 2

para 3
