tests/snapshots/text_objects_test__diW_delete_inner_WORD.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
hello-world [t]est
